--- a/public/notes.html
+++ b/public/notes.html
@@ -11,7 +11,7 @@
       integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="\Users\Mikes\Downloads\UCF\Bootcamp\class\challenges\Note_Taker\public\assets\js\index.js" />
+    <link rel="stylesheet" href="\assets\css\styles.css" />
   </head>
 
   <body>
@@ -52,6 +52,6 @@
         </div>
       </div>
     </div>
-    <script src="public/assets/js/index.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
