--- a/public/notes.html
+++ b/public/notes.html
@@ -49,6 +49,7 @@
         </div>
       </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/index.js"></script>
   </body>
 </html>
